# building-with-ai

./: .gitignore  LICENSE  README.md  requirements.txt
agent-blog-post/: post-v2.md
agent-blog-post/coding-agent/: pyproject.toml
agent-blog-post/search-agent/: 1_hook_up_gemini.py  pyproject.toml
agentic loop/: .env.example  01_ping_llm.py  02_add_tool.py  03_agentic_loop.py  04_conversation_loop.py  README.md  plan.md  pyproject.toml
apps/: app_01_query.py
general-purpose-agent/coding-agent/: 1_hook_up_claude.py  2_add_a_tool.py  2a_add_more_tools.py  3_agentic_loop.py  4_conversational_loop.py  README.md
general-purpose-agent/search-agent/: 2_add_a_tool.py  3_agentic_loop.py  4_conversational_loop.py  README.md
llm-testing/: README.md  requirements.txt
notebooks/: 01-agentic-continuum.ipynb  tool-use-function-calling-demo.ipynb
personal-automation/: .gitignore  README.md  example.env  minimal_fastmcp.py  pyproject.toml  simple_mirascope_agent.py
personal-automation/automations/: browser_tasks.py  browsermcp.py  config.py  decorators.py  gmail_categorization.py  gmail_types.py  gmailmcp.py  mymcp.py  utils.py
personal-automation/personal_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
synthetic-data-EDD/: EXPERIMENTS.md  README.md  definitions.py  simple_llm_judge.py  synthetic_data_generator.py
synthetic-data-EDD/data/: evaluated_responses_20250328_190348.json  gemini_llm_evaluated_20250328_231950.json  llm_evaluated_20250328_220744.json  model_comparison_20250328_230931.json  (+5 more)
synthetic_experiments/: README.md  requirements.txt
(+8 files in other folders)
